--- a/book.tex
+++ b/book.tex
@@ -81,7 +81,7 @@ Copyright Infringement Notification.\\
 
 Updated: $Date: 2019/10/23$.\\
 
-\noindent \textit{Primera edición, Octubre 2019} 
+\noindent \textit{Primera edición, Noviembre 2019} 
 % FIN Página para "derechos reservados", ISBN, licencia creative commons, etc.
 
 %=========================================
@@ -340,6 +340,7 @@ Realice las operaciones siguientes y expresar la respuesta en notación científ
 \item[r.] $((0.00005)^3\times (0.003\times 10^{-3})^{-2})^3$
 \item[s.] $\sqrt[5]{\frac{(2.00001\times 10^{-4} - 1.00002\times 10^{-4})^{0.01}}{(0.111111-1.2\times 10^{-2})^{1/3}}}$
 \item[t.] $\sqrt{2\times 10^{-5}}-\sqrt{5\times 10^{-2}} + \sqrt{2} - \sqrt{5}$
+\item[u.] $ (9\times10^{-8})(4\times 10^{13})(0.4\times10^{-3})-(4.2\times 10^7)(0.5\times10^{-6})$
 \end{itemize}
 
 \section{Magnitudes y Medidas:}
@@ -523,7 +524,8 @@ El análisis dimensional sirve para deducir o verificar la validez de una fórmu
 dimensionalmente: $[v_f] = [v_0] + [a][t] = \frac{L}{T} = \frac{L}{T} + \frac{L}{T^2}T$, y por tanto compruebo que tiene validez 
 dimensional.
 
-\subsection{Problemas de conversión de unidades:}
+\subsection{Problemas del SI:}
+
 Convertir las siguientes magnitudes a lo que se indica:
 \begin{itemize}
  \item[1.] 3 cm a m.
@@ -549,7 +551,11 @@ Convertir las siguientes magnitudes a lo que se indica:
  $\frac{(0,9997895\times 10^{-7}pm)^2(2,714\times 10^8 ns)}{(1124.45\times 10^{-3} fm)(5,27\times 10^4 Ekg)}\times 
 \left(\frac{346512,345\times 10^{-6} \mu kg}{0,00023 Ts}\right)^3$.
  \item[22.] Realice el análisis dimensional del resultado del anterior problema.
-\end{itemize}
+\item[23.] Si tuviésemos un terrón en forma de cubo de 8 $m^3$ de volumen y nos disponemos a dividirlo en terrones de 1 $cm$ de 
+lado, ¿cuántos terrones obtendríamos?
+\item[24.] La edad de la Tierra es aproximadamente 4500 000 000 años. Exprese esta cantidad en segundos y en notación
+científica.
+ \end{itemize}
 
 \section{Fórmulas}
 
@@ -870,38 +876,95 @@ vectorial de dos vectores equivale al área del paralelogramo construído en est
 
 \subsection{Problemas de vectores:}
 
-\begin{itemize}
- \item[1.] Encuentre el módulo y dirección del vector $\vec{a}= \vec{i} - \vec{j}$.
- \item[2.] Encuentre el vector unitario del anterior problema.
- \item[3.] Calcula el valor de k sabiendo que el módulo del vector v= (k, 3) es 5.
- \item[4.] Hallar las coordenadas del punto C, sabiendo que B(2,2) es el punto medio de AC, A(3,1).
- \item[5.] Dos vectores forman entre sí un ángulo de 60°, si el valor de su resultante es de 156 unidades, y la magnitud de uno de 
-los vectores componentes es de 100 unidades, ¿cuál será la magnitud del otro vector?
- \item[6.]Un alumno camina 50 m hacia el este, a continuación 30 m hacia el sur, después 20 m hacia el oeste, y finalmente, 10 m 
+\begin{enumerate}
+ 
+ \item Calcular el vector unitario del vector $\vec{H} = 2\vec{i}+3\vec{j}$.
+ 
+ \item Siendo el vector G = 3i – 5j, expresarlo en coordenadas polares y geográficas.
+ 
+ \item Sean los vectores: A =(3,3), B=(-1,0) y C(2,2). Hallar la suma de esos vectores.
+ 
+\item Sean los vectores: A =(3,3), B=(-1,0) y C(2,2). Hallar: 3A-4B+5C.
+
+\item Que vector le debo restar al vector E =(8,7), para obtener el vector A =(2,3).
+ 
+ \item Encuentre el módulo y dirección del vector $\vec{a}= \vec{i} - \vec{j}$.
+ 
+ \item Encuentre el vector unitario del anterior problema.
+ 
+ \item Hallar las coordenadas del punto C, sabiendo que B(2,2) es el punto medio de AC, A(3,1).
+ 
+ \item Dos vectores forman entre sí un ángulo de 60°, si el valor de su resultante es de 156 unidades, y la magnitud de uno 
+de los vectores componentes es de 100 unidades, ¿cuál será la magnitud del otro vector?
+ 
+ \item Un alumno camina 50 m hacia el este, a continuación 30 m hacia el sur, después 20 m hacia el oeste, y finalmente, 10 m 
 hacia el norte. Determina el vector desplazamiento desde el punto de partida hasta el punto de llegada. (incluyendo el ángulo que 
 determina su dirección)
- \item[7.] Encuentre la suma de los vectores $\vec{c}=\vec{i}+\vec{j}$ y $\vec{d}=2\vec{i}-3\vec{d}$.
- \item[8.] Encuentre también la diferencia.
- \item[9.] Encuentre el vector unitario del vector que es opuesto al siguiente vector $\vec{S} =  10\vec{i}-7\vec{j}$.
- \item[10.] Un vector hace un ángulo de $240^\circ$ en sentido antihorario con el eje de las abcisas y el valor de su componente 
+ 
+ \item Encuentre la suma de los vectores $\vec{c}=\vec{i}+\vec{j}$ y $\vec{d}=2\vec{i}-3\vec{d}$.
+ 
+ \item Encuentre también la diferencia.
+ 
+ \item Dado el vector $a =(3,-4)$, calcular el vector libre $b$ que tiene: la misma dirección y sentido que $a$ y módulo 
+igual a la unidad.
+ 
+ \item Encuentre el vector unitario del vector que es opuesto al siguiente vector $\vec{S} =  10\vec{i}-7\vec{j}$.
+ 
+ \item Un vector hace un ángulo de $240^\circ$ en sentido antihorario con el eje de las abcisas y el valor de su componente 
 en ese mismo eje es de 200 m, halle el vector unitario de ese vector.
- \item[11.] Encuentre el módulo del siguiente vector: $5\vec{d}-2\vec{c}$, donde $d=(34 m/s, 330^\circ)$ y $c = (54m/s, S20^\circ 
+ 
+ \item Encuentre el módulo del siguiente vector: $5\vec{d}-2\vec{c}$, donde $d=(34 m/s, 330^\circ)$ y $c = (54m/s, S20^\circ 
 O)$.
- \item[12.] Determina las coordenadas geográficas del siguiente vector: $\vec{R}=(23 m/s,N45^\circ E)$.
- \item[13.] Determina las coordenadas polares del siguiente vector: $\vec{T}=(7\vec{i}-4\vec{j})kgf$.
- \item[14.] Determina las coordenadas cartesianas del vector: $\vec{h}=(13,330^\circ)$.
-\item[15.] Calcula el producto escalar entre $\vec{a}=6\vec{i}-7\vec{j}$ y $\vec{b}=-4\vec{i}+10\vec{j}$.
-\item[16.] Determina si $\vec{a} = 12\vec{i}-13\vec{j}$ es perpendicular al vector $\vec{b}=4\vec{i}-3\vec{j}$.
-\item[17.] Determine la proyección del vector $\vec{r} = (23 km, N40^\circ O)$ sobre el vector $\vec{q}=(40km,230^\circ)$.
-\item[18.] Determine el área del paralelogramo formado por los vectores $\vec{u}=(1,1)$ y $\vec{v}=(1,-1)$.
-\item[19.] Siendo los vectores $\vec{a} = (2,3)$, $\vec{b} = (-3,5)$ y $\vec{c} = (4,-1)$, calcular lo siguiente: 
+ 
+ \item Determina las coordenadas geográficas del siguiente vector: $\vec{R}=(23 m/s,N45^\circ E)$.
+ 
+ \item Determina las coordenadas polares del siguiente vector: $\vec{T}=(7\vec{i}-4\vec{j})kgf$.
+ 
+ \item Determina las coordenadas cartesianas del vector: $\vec{h}=(13,330^\circ)$.
+
+ \item Calcula el producto escalar entre $\vec{a}=6\vec{i}-7\vec{j}$ y $\vec{b}=-4\vec{i}+10\vec{j}$.
+
+\item Determina si $\vec{a} = 12\vec{i}-13\vec{j}$ es perpendicular al vector $\vec{b}=4\vec{i}-3\vec{j}$.
+
+\item Determine la proyección del vector $\vec{r} = (23 km, N40^\circ O)$ sobre el vector $\vec{q}=(40km,230^\circ)$.
+
+\item Determine el área del paralelogramo formado por los vectores $\vec{u}=(1,1)$ y $\vec{v}=(1,-1)$.
+
+\item Siendo los vectores $\vec{a} = (2,3)$, $\vec{b} = (-3,5)$ y $\vec{c} = (4,-1)$, calcular lo siguiente: 
 $3\vec{a}\cdot\frac{1}{2}(\vec{c}+\vec{b})-7\vec{b}\cdot\vec{c}+5\vec{a}\cdot(\vec{c}-\vec{a})$ 
-\item[20.] Dado los vectores $\vec{v} = 3\vec{i}-\vec{j}+4\vec{k}$ y $\vec{w}=-\vec{i}+3\vec{j}+5\vec{k}$, calcule lo 
+
+\item Dado los vectores $\vec{v} = 3\vec{i}-\vec{j}+4\vec{k}$ y $\vec{w}=-\vec{i}+3\vec{j}+5\vec{k}$, calcule lo 
 siguiente: $\frac{1}{2}\vec{v}\times\vec{w}$.
-\item[21.] Sabiendo que $\vec{A} = (m - 1) \vec{i} + (2 m + 3) \vec{j}$ y $\vec{B} = (m - 2) \vec{i} + (2 m - 19) \vec{j}$. 
+
+\item Sabiendo que $\vec{A} = (m - 1) \vec{i} + (2 m + 3) \vec{j}$ y $\vec{B} = (m - 2) \vec{i} + (2 m - 19) \vec{j}$. 
 Encuentre el número real m para que se cumpla que $3 \vec{A} + \vec{B} = 0$.
 
-\end{itemize}
+\item Halle el vector unitario del siguiente vector: A = (3,4), y luego encuentre su opuesto.
+
+\item ¿Qué vector le debo restar al vector $\vec{v} = (2,4)$ para tener que el resultado sea el doble del vector $\vec{w} = 
+(-2,3)$?.
+
+\item Un automóvil recorre 3 km hacia el Norte y luego 5 km hacia el Norte $40^\circ$ Este, representar estos desplazamientos y 
+hallar el desplazamiento resultante gráfica y analíticamente.
+
+\item Calcula el valor de k sabiendo que el módulo del vector $\vec{v}$= (k, 3) es 5.
+
+\item Dos vectores tienen como longitud 9 y 6 cm, formando entre sí ángulos de $180^\circ$, $60^\circ$, $150^\circ$, $0^\circ$. 
+Halla gráficamente y analíticamente la magnitud del vector resultante y el ángulo que determina su dirección y sentido.
+
+\item Dos vectores forman entre sí un ángulo de $60^\circ$, si el valor de su resultante es de 156 unidades, y la magnitud de uno 
+de los vectores componentes es de 100 unidades, ¿cuál será la magnitud del otro vector?
+
+\item Un alumno camina 50 m hacia el este, a continuación 30 m hacia el sur, después 20 m hacia el oeste, y finalmente, 10 m 
+hacia el norte. Determina el vector desplazamiento desde el punto de partida hasta el punto de llegada. (incluyendo el ángulo que 
+determina su dirección)
+
+\item Una mosca se para en la pared de un cuarto. La esquina inferior izquierda de la pared se selecciona como el origen de un 
+sistema de coordenadas cartesianas en dos dimensiones. Si la mosca está parada en el punto que tiene coordenadas (2, 1) m, (a) 
+¿qué tan lejos está de la esquina del cuarto?, (b) ¿Cuál es su posición en coordenadas polares?
+
+\end{enumerate}
+
 
 \chapter{Física}
 
@@ -1082,9 +1145,6 @@ la velocidad promedio desarrollada por dicho móvil?
 
 
 
-
-
-
 \chapter{Movimiento Rectilíneo:}
 
 \textit{``Al principio vienen necesariamente a la mente la fantasía y la fábula. Desfilan después los cálculos matemáticos, y solo 
@@ -1126,6 +1186,18 @@ desplazamiento del movimiento.\\
  
 La ilustración \ref{mru} muesta a un auto con MRU que cada 2 segundos recorre una distancia de 8 metros, esto  corresponde a 
 decir que su velocidad es de $v = \frac{8m}{2s} = 4 m/s$, por lo cual despues de 6 segundos el auto habrá recorrido 24 metros.
+
+\subsection{Problemas de mru}
+
+\begin{enumerate}
+ \item En el mismo instante, una motocicleta sale de la ciudad A y otra de la ciudad B, con la intención de encontrarse en el 
+camino recto de 60 kilómetros que une ambas ciudades. Sabiendo que las velocidades de las motocicletas son 70km/h y 55km/h, 
+calcular cuánto tardarán en encontrarse.
+\item Una auto viaja con MRU y debe llegar a su destino a las 8.00 PM. Si viajara a 120 km/h llegarı́a una hora después y si 
+viajara a 160 km/h llegarı́a media hora antes. ¿A qué velocidad debe el auto viajar para que llegar a la hora indicada?.
+\end{enumerate}
+
+
 
 \section{Movimiento Rectilíneo Uniformemente Variado:}
  
@@ -1209,9 +1281,17 @@ movimiento, pero es importante notar que estas ecuaciones también se pueden pla
  
 Observando detenidamente estas ecuaciones se infiere que cada ecuación tiene cuatro diferentes magnitudes relacionadas 
 a través de ella, y por tanto conocer cualquiera de ella está en función de las otras tres, es decir, es suficiente con 
-este tipo de ecuaciones encontrar una magnitud conociendo otras tres distintas (este es un dato importante en el 
-momento 
-de resolver problemas relacionados con el MRUV).
+este tipo de ecuaciones encontrar una magnitud conociendo otras tres distintas (este es un dato importante en el momento de 
+resolver problemas relacionados con el MRUV).
+
+\subsection{Problemas de mruv}
+
+\begin{enumerate}
+ \item Un ciclista que está en reposo comienza a pedalear hasta alcanzar los 6 m/s en 6 minutos. Calcular la distancia total que 
+recorre si continúa acelerando durante 5 minutos más. 
+\end{enumerate}
+
+
 
 \section{Caída libre y lanzamiento vertical de los cuerpos:}
 
@@ -1281,6 +1361,37 @@ Es importante mencionar que cuando cuerpo realiza un lanzamiento vertical, este 
 libre que luego realizará una vez que alcanze la altura máxima, debido a que esta bajo la mismo módulo de la aceleración de la 
 gravedad y que además recorre la misma distancia (altura), y por tanto el tiempo que demorá en subir el cuerpo (tiempo de subida: 
 $t_s$) es el mismo tiempo que demora en bajar (tiempo de bajada: $t_b$).
+
+\subsection{Problemas de caída libre y lanzamiento vertical}
+
+\begin{enumerate}
+ \item Supongamos que arrojamos una piedra hacia arriba, ¿a que velocidad la tenemos que lanzar para que alcance una altura máxima
+de 32 metros?
+\item Hallar la velocidad con que fue lanzado un cuerpo hacia arriba si ésta se reduce a la tercera parte cuando ha subido 29.4 m.
+\item Un tipo está parado a 20 m de altura. Calcular qué tiempo tarda y con qué velocidad toca el suelo una piedra si el tipo:
+\begin{itemize}
+ \item[a.] La deja caer.
+ \item[b.] La tira para abajo con V0 = 10 m/s.
+\end{itemize}
+\item Se lanza un cuerpo hacia arriba con una velocidad de 24,5 m/s desde un punto a 68,6 metros por encima del suelo. Halla:
+
+\begin{itemize}
+ \item[a.] La altura máxima que alcanza el cuerpo.
+ \item[b.] El tiempo necesario para volver al punto de lanzamiento.
+ \item[c.] La velocidad de llegada al suelo.
+ \item[d.] El tiempo total en el aire.
+\end{itemize}
+\item Un cuerpo se lanza verticalmente hacia arriba desde una ventana y luego de 4 segundos triplica su velocidad. Hallar la 
+máxima altura alcanzada por el cuerpo respecto al lugar de lanzamiento.
+\item Una esfera se deja caer desde 80 m de altura y al rebotar en el piso se eleva siempre la cuarta parte de la altura anterior. 
+¿Qué tiempo ha transcurrido hasta que se produce el tercer impacto?.
+\item Un cuerpo cae libremente desde el reposo. La mitad de su caída se realiza en el último segundo, calcular el tiempo total.
+
+\item Un cuerpo se suelta desde una altura H. ¿Con qué velocidad llegará al suelo?.
+
+\end{enumerate}
+
+
 
 \chapter{Movimiento parabólico:} 
  
@@ -1374,6 +1485,15 @@ que:
 \begin{equation}
  h_{max} = -\frac{v_0^2sen^2(\theta)}{2g}
 \end{equation}
+
+\section{Problemas de movimiento parabólico}
+
+\begin{enumerate}
+ \item Un soldado acostado en el suelo lanza una granada con velocidad inicial de 25 m/s, y un ángulo de elevación de
+ $53^\circ$
+. Despupess de que tiempo escuchará el estallido. Velocidad del sonido: 340m/s.
+\end{enumerate}
+
 
 \chapter{Movimiento circular:}
 
@@ -1478,6 +1598,68 @@ Es decir, en el MCU: $\omega = constante$ y $v = constante.$
 
 Esto implica que el cuerpo que tiene MCU sólamente posee una aceleración que es la centrípeta.
 
+\subsection{Problemas de mcu}
+
+\begin{enumerate}
+\item Tranformar los siguientes ángulos en radianes:
+\begin{itemize}
+ \item[a.] $40^\circ$
+ \item[b.] $140^\circ$
+ \item[c.] $155^\circ$
+ \item[d.] $640^\circ$
+ \item[e.] $60^\circ$
+ \item[f.] $40^\circ$
+ \item[g.] $55^\circ$
+ \item[h.] $64^\circ$
+\end{itemize}
+
+ \item Encontrar la longitud de arco de circunferencia de radio y ángulo:
+\begin{itemize}
+ \item[a.] 20 cm y $45^\circ$
+ \item[b.] 5.0 km y $75^\circ$
+ \item[c.] 30 m y $360^\circ$
+ \item[d.] 6.5 m y $60^\circ$
+  \item[e.] 200 cm y $45^\circ$
+ \item[f.] 50.0 km y $75^\circ$
+ \item[g.] 77 cm y $360^\circ$
+ \item[h.] 50 mm y $60^\circ$
+\end{itemize}
+ \item Un ciclista recorre 5,4 km en 15 min a velocidad constante. Si el diámetro de las ruedas de su bicicleta es de 80 cm, 
+calcula: a) la velocidad angular de las ruedas y b) el número de vueltas que dan las ruedas en ese tiempo.
+\item Dos poleas de 6 y 15 cm de radio respectivamente, giran conectadas por una banda. Si la velocidad angular de la polea de 
+menor radio es 20 vueltas/segundo. ¿Cúal es la velocidad angular de la polea de radio mayor?.
+\begin{figure}[H]
+ \centering
+\includegraphics[width=5.0cm,height=3.0cm]{images/poleas.jpg}
+\end{figure}
+\item Un astronauta da la vuelta a la Tierra cada 300 minutos.¿Cuál es la velocidad angular?¿Cuál es su velocidad lineal si 
+describe una orbita de 30000 km de radio?
+\item ¿Cuál es la velocidad de un angular de un disco que gira con una velocidad angular de 13,4 rad en un minuto? Si el radio 
+del disco es 20 cm, ¿cuál es la velocidad lineal en el borde del mismo?.
+\item ¿Cuánto tiempo necesitará el disco anterior para girar 3 vueltas enteras?¿Cuál es la aceleración centrípeta en el borde del 
+disco?
+\item ¿Cuál es la velocidad angular de un disco que gira con una velocidad angular de $3\pi$ rad en medio minuto? Si el radio del 
+disco es 40 cm, ¿cuál es la aceleración centrípeta en el borde del mismo?.
+
+\item ¿Cuál es la velocidad angular de las manecillas del reloj?¿El periodo del movimiento?
+
+\item Un móvil recorre una circunferencia de 2 m de radio dando 20 vueltas en 10 segundos. Determinar:
+
+\begin{itemize}
+ \item [a.] La frecuencia.
+ \item [b.] El periodo.
+ \item [c.] La velocidad angular.
+ \item [d.] La velocidad lineal.
+\end{itemize}
+
+\item Calcule la aceleración centrípeta de la   Luna.
+
+\item Calcule la aceleración centrípeta y angular de la Tierra alrededor del Sol.
+
+\end{enumerate}
+
+
+
 \section{Movimiento Circular Uniformemente Variado:}
 
 Es el movimiento que realiza un cuerpo con trayectoria circular y con una aceleración tangencial, que hace que la velocidad 
@@ -1578,6 +1760,40 @@ s = (\frac{v_f + v_0}{2})t
 \begin{equation}
 s = v_0t+\frac{1}{2}a_Tt^2
 \end{equation}
+
+
+\section{Problemas de mcuv}
+
+\begin{enumerate}
+ \item Una partícula inicia su M.C.U.V. con una velocidad tangencial de 6 m/s. Si su aceleración tangencial es $4 m/s^2$, y su 
+radio de giro es 9 m. Determinar su velocidad tangencial y angular luego de 12 segundos.
+
+\item Calcular la aceleración angular que tiene un disco, sabiendo que éste es capaz de triplicar la velocidad que tiene luego de 
+dar 600 vueltas en 20 s.
+
+\item La velocidad de una rueda, que gira con movimiento uniformemente retardado, disminuyó al ser frenada durante 1 minuto, desde 
+300 R.P.M. hasta 180 R.P.M. Hallar la aceleración angular de la rueda.
+
+\item Un ventilador alcanza su velocidad máxima de trabajo de 900 R.P.M. en 40 s. Si al ``encenderlo'' inicia su movimiento con 
+aceleración constante, calcular cuántas revoluciones completa en el primer minuto de su movimiento.
+
+\item Un móvil tiene una velocidad tangencial de 120m/s; luego de 5 segundos esta velocidad se convierte en 154 m/s. Si el radio 
+de la circunferencia es de 4m, hallar la aceleración angular. 
+
+\item Una rueda de 50cm de diámetro tarda 10 segundos en adquirir una velocidad constante de 360rpm. Calcula la aceleración 
+angular y la aceleración centrípeta que posee un punto en la periferia de la rueda a los 5 segundos la rueda del problema.
+
+\item Un volante de 50cm de radio gira a 180 rpm. Si es frenado y se detiene en 20 segundos, calcula: a) La velocidad angular 
+inicial en radianes por segundo, y b) La aceleración tangencial de frenado.
+
+\item Calcular la  velocidad  angular  final  y  el desplazamiento  angular de  una  rueda  que  tiene una velocidad angular 
+inicial de $8 rad/s$ y experimenta una aceleración de $3 rad/s^2$ en 12 s.
+
+\item Una  rueda  gira  con  una  velocidad  angular inicial  de  12  rad/s  experimentando  una  aceleración de $5 rad/s^2$ en 
+6s. Calcular: a) el desplazamiento angular total, b) la velocidad angular final.
+
+\end{enumerate}
+
 
 \chapter{Dinámica}
 
@@ -1808,12 +2024,66 @@ componentes de las fuerzas.\\
 Si en un sistema existen dos o más cuerpos de interés, éstos se deben separar y cada uno tiene un DCL propio con sus respectivas 
 fuerzas actuando.
 
-\begin{figure}[ht]
+\begin{figure}[H]
  \centering
  \includegraphics[scale=0.6]{images/cuerpo-libre.png}
  % cinematica.png: 0x0 px, 300dpi, 0.00x0.00 cm, bb=
  \caption{Ilustración de un ejemplo de diagrama de cuerpo libre.}\label{frb}
 \end{figure}
+
+\subsection{Problemas de Dinámica}
+
+\begin{enumerate}
+ \item Una fuerza neta de 7.5 kN dirigida hacia el oeste actúa sobre un auto de carreras de 1208 kg. ¿A qué velocidad acelerará 
+el auto?
+
+ \item Un automóvil, con una masa de 1485 kg viaja hacia el sur a 116 km/h, disminuye su velocidad en 10.25 segundos. ¿Cuál es la 
+magnitud y la dirección de la fuerza neta que actuó en el camión?
+
+\item Un ascensor pesa 400 Kg. ¿Qué fuerza debe ejercer el cable hacia arriba para que suba con una aceleración de $5 m/s^2$?.
+
+\item Calcula la fuerza que habrá que realizar para frenar, hasta detener en 10 segundos un trineo que se mueve a 50 km/h.
+
+\item Un vehículo de 800 kg se mueve en un tramo recto y horizontal de autovı́a a 72 km/h. Si por una averı́a deja de funcionar 
+el motor y se detiene a los 100 m, calcula la fuerza de rozamiento.
+
+\item ¿Cuál es la masa de un cuerpo, si al aplicarle una fuerza de 420 N de produce una aceleración de $8.4 m/s^2$ ?
+
+\item ¿Cuánto tiempo deberá actuar una fuerza de 80 N sobre un cuerpo de masa de 12.5 kg para lograr detenerlo si va a una 
+velocidad de 720 km/h?
+
+\item ¿Cuál es la fuerza necesaria para que un móvil de 1500 kg, partiendo de reposo adquiera una rapidez de $2 m/s^2$ en 12 s?
+
+\item Calcular la masa de un cuerpo, que estando de reposo se le aplica una fuerza de 150 N durante 30 s, permitiéndole recorrer 
+10 m. ¿Qué rapidez tendrá al cabo de ese tiempo?
+
+\item Calcular la magnitud de la aceleración que produce una fuerza cuya magnitud es de 50 N a un cuerpo cuya masa es de 13,000 
+gramos.
+
+\item Determinar la magnitud de la fuerza que recibe un cuerpo de 45 kg, la cual le produce una aceleración cuya magnitud es de $7 
+m/s^2$.
+
+\item Una bala de 0,25 g de masa sale de un cañón de un rifle con una velocidad de 350m/s. ¿Cual es la fuerza promedio que se 
+ejerce sobre la bala mientras se desplaza por el cañón de 0.8 m de longitud del rifle?
+
+\item Un carrito de juguete de 3 kg parte del reposo y se mueve una distancia de 4 m en 2 s bajo la acción de una fuerza constante 
+única.Encuentre la magnitud de la fuerza. 
+
+\item ¿Cuál es la fuerza necesaria para que un móvil de 1700 Kg, partiendo de reposo adquiera una rapidez de $2 m/s^2$ en 12.4 s?
+
+\item Un protón tiene una masa de $1,7 \times 10^{−27} kg$ y se mueve con una velocidad de $2 \times 10^8 m/s$. ¿Qué fuerza será 
+necesaria para reducir su velocidad a $10^8 m/s$ en 0.0001 s?
+
+\item Calcular la velocidad final con la que un bloque de masa 10 kg llega a la parte inferior de un plano inclinado de 20 cm 
+de largo y 15 cm de alto. Considérese que no hay fuerzas de rozamiento y que la el valor de la aceleración de la gravedad
+igual a $10 m/s^2$.
+
+\item Dos bloques de masas $m_1 = 20 kg$ y $m_2 = 8 kg$, están unidos mediante una cuerda homogénea inextensible que pesa 2 kg. Se
+aplica al conjunto una fuerza vertical hacia arriba de 560 N. Calcular: a) La aceleración del conjunto; b) Las fuerzas que actúan 
+en los extremos de la cuerda.
+\end{enumerate}
+
+
 
 \chapter{Trabajo y Energía}
 
@@ -1951,6 +2221,40 @@ P = Fv
 \end{equation}
 
 Las unidad de medida para la potencia en el S.I son el Watts ($W$), el cual se define como $Joule/s$.
+
+\section{Problemas de trabajo y energía}
+
+\begin{enumerate}
+
+\item Un hombre sube por las escaleras de un edificio llevando a cuestas una lavadora que pesa 500 N, y cuando llega al octavo 
+piso, se había dado cuenta que se ha equivocado de edificio, y regresa a la planta baja. Si el octavo piso esta a 20 metros de 
+altura, ¿cuál fue el trabajo realizado por el hombre durante su recorrido?
+
+\item Se suelta un bloque de masa de 10 kg desde lo alto de un plano inclinado que forma un ángulo de $30^\circ$ con la
+horizontal y de longitud 50 cm. El bloque choca contra un resorte horizontal ideal y lo deforma 10 cm en la parte baja del plano 
+inclinado. Conociendo que el coeficiente de rozamiento entre el plano inclinado y el bloque es 0.3; determine la constante 
+elástica del resorte.
+
+\item Un pedazo de plastilina, de 40 g de masa, se mueve con velocidad de 100 m/s y choca, quedando incrustada, en un bloque de 
+madera de 1 kg de masa que está en reposo. El bloque está unido a un muelle que se contrae 20 cm. Si no hay rozamiento entre 
+el suelo y el bloque, determina el periodo de oscilación del movimiento vibratorio generado.
+
+\item Una maceta cae de un balcón a una velocidad de 9,81m/s adquiriendo una energía cinética de 324J, ¿cuál es su masa?  
+
+\item Una persona transporta sobre sus hombros un bulto de 25 kg con el que recorre 20 m. Determina el trabajo realizado para 
+soportarlo. 
+
+\item Un automóvil de 1.500 kg lleva una velocidad de 120 km/h por una carretera horizontal. En un determinado momento ve un 
+obstáculo y frena hasta pararse. Calcula el trabajo realizado.
+
+\item Un automóvil de 1.000 kg tarda 8 segundos en alcanzar la velocidad de 72 km/h.¿Qué potencia desarrolla el motor sabiendo que 
+la fuerza de rozamiento es equivalente a la décima parte del peso? 
+
+\item Se tiene un plano inclinado cuya longitud es 15 m y cuya base es 9 m. ¿Con qué velocidad y con qué energía cinética  llegará 
+a su extremo inferior un cuerpo de 60 Kg que partió del extremo superior con una velocidad de 2 m/s? 
+
+\end{enumerate}
+
 
 \chapter*{Bibliografía:}
 
